--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
+    "expo-sharing": "~8.5.0",
     "expo-image-picker": "~9.2.0",
-    "expo-sharing": "~8.5.0"
+    "react-native-elements": "*",
+    "expo-permissions": "~10.0.0",
+    "@expo/vector-icons": "^12.0.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-vector-icons": "8.1.0",
+    "@material-ui/icons": "*",
+    "@material-ui/core": "4.0.0",
+    "@types/react": "17.0.0",
+    "native-base": "*"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
