--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Practice",
-    "slug": "practice",
+    "name": "reactnativeapps2021",
+    "slug": "reactnativeapps2021",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,7 +27,6 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "description": "My practices"
+    }
   }
 }
